<?xml version="1.0"?>
<package format="2">
  <name>fpvout</name>
  <version>0.0.0</version>
  <description>The fpvout package</description>

  <maintainer email="usrg@todo.todo">usrg</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
